cdk8s/dist/prod-1-obs-youtube.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: obs-youtube
    app.kubernetes.io/instance: obs-youtube
    app.kubernetes.io/name: obs
    app.kubernetes.io/part-of: tripbot
  name: obs-youtube
  namespace: prod-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obs-youtube
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        adanalife.dev/config-hash: 1aa871d64c
      labels:
        app: obs-youtube
        app.kubernetes.io/instance: obs-youtube
        app.kubernetes.io/name: obs
        app.kubernetes.io/part-of: tripbot
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: obs-youtube-config
            - secretRef:
                name: obs-youtube-stream-key
                optional: true
          image: adanalife/obs:3.9.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /opt/obs/healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 10
          name: obs
          ports:
            - containerPort: 5900
              name: vnc
            - containerPort: 4455
              name: websocket
            - containerPort: 6080
              name: novnc
            - containerPort: 8080
              name: obs-server
          resources:
            limits:
              gpu.intel.com/i915: "1"
              memory: 3Gi
            requests:
              cpu: "2"
              gpu.intel.com/i915: "1"
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      priorityClassName: prod-stream
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: obs-youtube
    app.kubernetes.io/instance: obs-youtube
    app.kubernetes.io/name: obs
    app.kubernetes.io/part-of: tripbot
  name: obs-youtube
  namespace: prod-1
spec:
  ports:
    - name: vnc
      port: 5900
      targetPort: vnc
    - name: websocket
      port: 4455
      targetPort: websocket
    - name: novnc
      port: 6080
      targetPort: novnc
    - name: obs-server
      port: 8080
      targetPort: obs-server
  selector:
    app: obs-youtube
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-route53
    external-dns.alpha.kubernetes.io/hostname: obs-youtube.prod.whereisdana.today
  name: obs-youtube
  namespace: prod-1
spec:
  ingressClassName: traefik
  rules:
    - host: obs-youtube.prod.whereisdana.today
      http:
        paths:
          - backend:
              service:
                name: obs-youtube
                port:
                  name: novnc
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - obs-youtube.prod.whereisdana.today
      secretName: obs-youtube-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obs-youtube-ts
  namespace: prod-1
spec:
  defaultBackend:
    service:
      name: obs-youtube
      port:
        number: 6080
  ingressClassName: tailscale
  tls:
    - hosts:
        - obs-youtube-prod
